fixed broken styles for slides and regular content

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,11 +84,11 @@ q {
 .title {
 	margin-bottom: 0;
 	font-size: 2em;
-	font-weight: 800;
+	font-weight: 400;
 }
 .description {
 	font-family: serif;
-	font-size: 1.5em;
+	font-size: 1.2em;
 	font-weight: 400;
 	font-style: italic;
 }
@@ -199,23 +199,42 @@ li.punkish-footnote {
 	text-indent: -1em;
 }
 .content {
-	border: 1px solid silver;
 	width: 100%;
-	padding-bottom: 75%; /* 4:3 */
 	position: relative;
-	background-color: #f5f5f5;
+/* 	font-family: "et-book", serif; */
+}
+
+.slideContainer {
+	border: 1px solid silver;
+	width: 70%;
+	padding-bottom: 52.5%;
+	position: relative;
+	/* background-color: #f5f5f5; */
 	font-family: "et-book", serif;
 }
-.content:hover {
-	background-color: lightgray;
-}
+
 .intro-slide {
-	margin-top: 1em;
+	padding: 2em 2em 5em 2em;
+	position: absolute;
+	top: 0; 
+	bottom: 0; 
+	left: 0; 
+	right: 0;
+	/* border: 1px solid silver;
+	width: 100%;
+	padding-bottom: 75%;
+	position: relative;
+	background-color: #f5f5f5;
+	font-family: "et-book", serif; */
+	/* margin-top: 1em;
 	margin-bottom: 2rem;
 	position: absolute;
 	top: 0; bottom: 0; left: 0; right: 0;
-	padding: 2em;
+	 */
 }
+/* .intro-slide:hover {
+	background-color: lightgray;
+} */
 .intro-slide h2 {
 	font-size: 2em;
 }
